istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: todo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: todo-frontend
spec:
  hosts:
    - "*"
  gateways:
    - todo-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: todo-frontend
            port:
              number: 80
